Stop nav bar link text wrapping

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -67,6 +67,7 @@
 
 .nav-link {
     margin-inline: 2rem;
+    text-wrap: nowrap;
     font-weight: 450;
     filter: drop-shadow(0px 0px 0px var(--color-text));
     transition:
